k8s/ecommerce-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-ui
  template:
    metadata:
      labels:
        app: ecommerce-ui
    spec:
      containers:
      - name: ecommerce-ui
        image: lokeshacr2026.azurecr.io/ecommerce-ui:11   # 👈 Yahan 11 tag
        ports:
        - containerPort: 80
