k8s/orderapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapi-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orderapi
  template:
    metadata:
      labels:
        app: orderapi
    spec:
      containers:
      - name: orderapi
        image: lokeshacr2026.azurecr.io/orderapi:11
        ports:
        - containerPort: 8080
