k8s/productapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productapi-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productapi
  template:
    metadata:
      labels:
        app: productapi
    spec:
      containers:
      - name: productapi
        image: lokeshacr2026.azurecr.io/productapi:latest
        ports:
        - containerPort: 8080
