k8s/ecommerce-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-ui
  ports:
  - port: 80
    targetPort: 80
