k8s/orderapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderapi-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: orderapi
  ports:
  - port: 80
    targetPort: 8080
