k8s/productapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: productapi-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: productapi
  ports:
  - port: 80
    targetPort: 8080
